--- a/240318_helloidol/css/my_style.css
+++ b/240318_helloidol/css/my_style.css
@@ -2,8 +2,55 @@ body{
     background-color: rgb(241, 233, 224);
 }
 
-h1{
+h1,h3{
     background-color: rgb(216, 166, 219); 
     color: #eeeeee; 
      /*폰트컬러아니고 그냥 컬러임.  */
+}
+
+h1 ~ h3{  /*h1과 h3는 자매. h1 아래 모든 h3 적용*/
+    background-color: blueviolet;
+}
+
+h1 + h2, /*h1과 h2 자매. h1 바로 아래 h2에 적용*/
+h3 + h2{ /*h3과 h2 자매. h3 바로 아래 h2에 적용*/
+    background-color: chartreuse;
+}
+
+li {
+    background-color: chocolate;
+}
+
+ul > li{
+    background-color: aquamarine;
+}
+
+ul > ul > li{
+    background-color: cadetblue;
+}
+
+li:first-child{
+    font-size: 20pt;
+}
+
+li:last-child{ /*li의 막내자식 X . 막내자식인데 li인 아이*/
+    font-size: 5pt;
+}
+
+li:nth-child(3){ /*세번째 자식인데 걔가 li인 아이*/
+    font-size: 2pt;
+}
+li:nth-child(2n){/*짝수 번째 자식인데 걔가 li인 아이*/
+    text-decoration: underline;
+}
+li:nth-child(even){ /*2n이나 even이나 같은 짝수라는 뜻~ */ /*짝수 번째 자식인데 걔가 li인 얘*/
+        color: blue;
+}
+
+li:nth-child(2n-1){     /*홀수번째 자식인데 걔가 li인 아이*/
+    font-weight: bold;
+}
+
+li:nth-child(odd){      /*홀수번째 자식인데 걔가 li인 아이*/
+    color: purple;
 }
