css.search-container

--- a/240513_nav/css/school-market.css
+++ b/240513_nav/css/school-market.css
@@ -7,15 +7,38 @@
 }
 
 .search-container {
-    font-size: var(--h1-font-size);
+    font-size: var(--h2-font-size);
+    background-color: #dcdcdc;
+    padding: 10px 20px;
+    border-radius: 40px;
+    min-width: 400px;
+    width: 90%;
+    max-width: 800px;
+    display: flex;
+    align-items: center;
 }
 
 #search-bar{
-    font-size: var(--h1-font-size);
+    font-size: var(--h2-font-size);
+    border: 2px solid green;   /*입력창 외곽선 삭제*/
+    background: none;
+    outline: none;  /*focus 되었을 때 외곽선 삭제*/
+    padding: 10px;
+    flex-grow: 1;   /*정해진 너비에 여유 공간이 있을 때 확장하자 (입력창 커짐)*/
 }
 
 .product-container {
     border: 1px solid blue;
     width: 100px;
     height: 100px;
+}
+
+.search-container > i {
+    margin-top: 8px;    /*돋보기 높이 조절*/
+}
+
+@media screen and (max-width: 600px){
+    #school-market{
+        margin-top: calc(var(--nav-height) + 40px);
+    }
 }
