css delete green border in #search-bar

--- a/240513_nav/css/school-market.css
+++ b/240513_nav/css/school-market.css
@@ -20,7 +20,7 @@
 
 #search-bar{
     font-size: var(--h2-font-size);
-    border: 2px solid green;   /*입력창 외곽선 삭제*/
+    border: none;   /*입력창 외곽선 삭제*/
     background: none;
     outline: none;  /*focus 되었을 때 외곽선 삭제*/
     padding: 10px;
