school-market 반응형 css 완성

--- a/240513_nav/css/school-market.css
+++ b/240513_nav/css/school-market.css
@@ -13,7 +13,7 @@
     border-radius: 40px;
     min-width: 400px;
     width: 90%;
-    max-width: 800px;
+    max-width: 600px;
     display: flex;
     align-items: center;
 }
@@ -28,17 +28,81 @@
 }
 
 .product-container {
-    border: 1px solid blue;
-    width: 100px;
-    height: 100px;
+    border: none;
+    padding: 0 100px;
+    width: calc(100%);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 40px;
 }
 
 .search-container > i {
     margin-top: 8px;    /*돋보기 높이 조절*/
 }
 
+.product-item{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #ededed;
+    padding: 30px;
+    border-radius: 40px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.3);
+    position: relative;  /*자손 절대 좌표의 기준 좌표가 얘로 변경*/  
+}
+
+.product-item img{
+    height: 200px;
+    aspect-ratio: 1/1; /*앞:너비,뒤:높이 비율*/
+    object-fit: contain;  /*비율에 맞게 축소하고 나머지 여백; cover : 비율에 맞게 확대하고 자기가 짤림*/
+    border-radius: 10px;
+    background-color: white;    /*작은 이미지의 무뚝뚝씨는 둥근 사각형이 안되었는데 배경색을 칠해서 커버침*/
+
+}
+
+.product-item .name{    /*class product-item 아래 자손으로 class name*/
+    background-color: #dcdcdc;
+    padding: 4px 30px;
+    border-radius: 20px;    /*높이 38.4니까 그거 1/2 정수로*/
+    position: absolute; /*위치조정*/
+    bottom: -20px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.3);
+    font-size: var(--h2-font-size);
+}
+
+@media screen and (max-width:800){
+    .product-container{
+        justify-content: center;    /*세로 한줄 일 때 왼쪽으로 치우치는 것 가운데로 정렬*/
+    }
+}
+
 @media screen and (max-width: 600px){
     #school-market{
         margin-top: calc(var(--nav-height) + 40px);
+    }
+    .search-container{
+        font-size: var(--h3-font-size);
+        padding: 4px 16px;
+    }
+    #search-bar{
+        font-size: var(--h3-font-size);
+    }
+    .search-container i{
+        font-size: var(--h3-font-size);
+        margin-top: 9px;
+    } 
+    .product-item{
+        padding: 20px;
+        border-radius: 30px;
+    }
+    .product-item img{
+       height: 150px;
+       aspect-ratio: 2/1;
+    }
+    .product-item .name{
+        font-size: var(--h3-font-size);
+        border-radius: 17px;
+        bottom: -17px;
     }
 }
