change title navbar -> School Market dormitory

--- a/240513_nav/css/school-market.css
+++ b/240513_nav/css/school-market.css
@@ -71,6 +71,10 @@
     font-size: var(--h2-font-size);
 }
 
+::placeholder{
+    font-size: var(--h3-font-size); /*설명은 조금 작게*/
+}
+
 @media screen and (max-width:800){
     .product-container{
         justify-content: center;    /*세로 한줄 일 때 왼쪽으로 치우치는 것 가운데로 정렬*/
