기숙사 요일 지정 css

--- a/240513_nav/css/dormitory.css
+++ b/240513_nav/css/dormitory.css
@@ -1,8 +1,48 @@
 
 main{
-    margin-top: calc(var(--nav-height) + 100px);
+    margin: 0 auto; /*1. 가운데로 먼저 맞추자*/
+    margin-top: calc(var(--nav-height) + 40px);    /*2. 위에서 띄우자*/
+    font-size: var(--h2-font-size);
+}
+#dormitory{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: min(100%, 600px);    /*브라우저 넙가 600px 초과면 , 600px, 미만이면 그 크기*/
 }
 
+#dormitory > h1{
+    font-size: var(--h1-font-size);
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+#dormitory #selection-container{
+    margin: 0 outo;
+    margin-bottom: 80px;
+    font-size: var(--h2-font-size);
+    width: 400px;
+    padding: 5px 10px;
+    display: flex;
+    justify-content: center;
+    column-gap: 10px;
+    background-color: #a0d49c;
+    border-radius: 40px;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 25%);
+}
+
+.selection-item{
+    padding: 5px 10px;
+    border-radius: 40px;
+    
+}
+
+.selection-item:hover,
+.select{
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 25%);
+    background-color: white;
+    cursor: pointer;
+}
 #calendar-header{
     display: flex;
     justify-content: center;
@@ -11,13 +51,14 @@ main{
 }
 
 #calendar-container{
-
-    width: 600px;
+    /* width: 100%;
+    max-width: 600px; */
     height: 400px;
     margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(7,1fr);
     border-bottom: 1px solid #555;
+    font-size: var(--h3-font-size);
 }
 
 
