기숙사 시간 선택 css

--- a/240513_nav/css/dormitory.css
+++ b/240513_nav/css/dormitory.css
@@ -43,6 +43,10 @@ main{
     background-color: white;
     cursor: pointer;
 }
+
+#calendar{
+    display: none;
+}
 #calendar-header{
     display: flex;
     justify-content: center;
@@ -86,4 +90,23 @@ main{
     color: #ddd !important;
 }
 
+.flex-container{
+    display: flex;
+    justify-content: center;
+    column-gap: 20px;
+}
 
+#dormitory select{
+    font-size: var(--h2-font-size);
+    border: none;
+    border-radius: 20px;
+    background-color: #f0f0f0;
+    padding: 15px 20px;
+}
+
+.btn{
+    font-size: var(--h2-font-size);
+    padding: 5px 20px;
+    margin-top: 20px;
+    float: right;
+}
