--- a/240513_nav/css/dormitory.css
+++ b/240513_nav/css/dormitory.css
@@ -41,9 +41,7 @@ main {
     border-radius: 40px;
     box-shadow: 0 2px 2px rgb(0, 0, 0,25%); ;
 }
-#calendar{
-    display: none;
-}
+
 #calendar-header{
     display: flex;
     justify-content: center;
@@ -73,12 +71,12 @@ main {
 .other-month{
     color: #ddd;
 }
-.item:nth-child(7n+7){
+/* .item:nth-child(7n+7){
     color: rgb(62, 62, 246);
 }
 .item:nth-child(7n+1){ 
     color: crimson !important;
-}
+} */
 
 .flex-container{
     display: flex;
@@ -100,6 +98,23 @@ main {
     float: right;
 }
 
-#selection-washingmachine-time{
+#selection-washingmachine-time,
+#selection-room-name,
+#calendar{
     display: none;
 }
+.board-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr 2fr 1fr 1fr;
+}
+
+#board .header{
+    background-color: blanchedalmond;
+}
+#board .item{
+    color: black;
+    border: 1px solid gray;
+    height: 30px;
+}
+
+
