기숙사 요일지정,시간선택,세탁기예약현황표 페이지로 이동

--- a/240513_nav/css/dormitory.css
+++ b/240513_nav/css/dormitory.css
@@ -100,7 +100,8 @@ main {
 
 #selection-washingmachine-time,
 #selection-room-name,
-#calendar{
+#calendar,
+#board{
     display: none;
 }
 .board-container{
